@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Licensed under the  Apache License, Version 2.0 (the "License");
+<!-- Licensed under the  Apache Lice
+nse, Version 2.0 (the "License");
     You may not use this file except in compliance with the License.
     You may obtain a copy of the License  at http://www.apache.org/licenses/LICENSE-2.0.
     Unless required by applicable law or agreed to in writing, software distributed under the
@@ -27,7 +28,7 @@
   <properties>
     <javac.src.version>${maven.compiler.source}</javac.src.version>
     <javac.target.version>${maven.compiler.target}</javac.target.version>
-    <jar.manifest.mainclass>com.jetbrains.youtrack.db.internal.server.ServerMain
+    <jar.manifest.mainclass>com.jetbrains.youtrackdb.internal.server.ServerMain
     </jar.manifest.mainclass>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!--This property is updated automatically and is needed to make build reproducible-->
@@ -84,10 +85,30 @@
     <dependency>
       <groupId>org.apache.httpcomponents.client5</groupId>
       <artifactId>httpclient5</artifactId>
-      <version>5.4.2</version>
+      <version>5.5</version>
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-server</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-util</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.youtrackdb</groupId>
+      <artifactId>youtrackdb-driver</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>fluent-hc</artifactId>
@@ -105,16 +126,18 @@
       <properties>
         <argLine>
           -ea
+          -Xms${heapSize}
           -Xmx${heapSize}
           -Dyoutrackdb.storage.diskCache.bufferSize=4096
           -Dyoutrackdb.security.userPasswordSaltIterations=10
           -Dyoutrackdb.memory.directMemory.trackMode=true
-          -Djava.util.logging.manager=com.jetbrains.youtrack.db.internal.common.log.ShutdownLogManager
+          -Djava.util.logging.manager=com.jetbrains.youtrackdb.internal.common.log.ShutdownLogManager
           -Dyoutrackdb.storage.diskCache.checksumMode=StoreAndThrow
           -Dyoutrackdb.security.warningDefaultUsers=false
           -Dyoutrackdb.file.log.deletion=false
           --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED
           --add-opens java.base/sun.security.x509=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
         </argLine>
       </properties>
     </profile>
@@ -212,10 +235,17 @@
         <configuration>
           <systemPropertyVariables>
             <buildDirectory>${project.build.directory}</buildDirectory>
+            <build.dir>${project.build.directory}</build.dir>
           </systemPropertyVariables>
           <excludes>
             <exclude>${exclude.test.1}</exclude>
           </excludes>
+          <properties>
+            <property>
+              <name>listener</name>
+              <value>com.jetbrains.youtrackdb.internal.JUnitTestListener</value>
+            </property>
+          </properties>
         </configuration>
       </plugin>
       <plugin>
@@ -254,5 +284,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
